minor css fix on small devices

--- a/src/styles/LeaderBoard.css
+++ b/src/styles/LeaderBoard.css
@@ -14,11 +14,10 @@
 padding: 0.6em 2em;
 border: none;
 margin : 10px;
-width:90vh;
+width:50vh;
 outline: none;
 color: rgb(255, 255, 255);
 background: #111;
-cursor: pointer;
 position: relative;
 z-index: 0;
 border-radius: 10px;
